--- a/css/template.css
+++ b/css/template.css
@@ -4,10 +4,6 @@
     border-radius: 3px;
 	width: 99%;
 	min-height:500px;
-	background-size: 66px 66px;
-	background-image: url("images/ajax-loader.gif");
-	background-repeat: no-repeat;
-	background-position: center center; 
 }
 
 #menu{
@@ -48,6 +44,7 @@ border-bottom-style: dotted;
 
 #status_container{
 	margin-top: 30px;
+	/*z-index:999;*/
 }
 
 #status{
@@ -159,4 +156,68 @@ box-shadow: 1px 1px 1px #888888;
 }
 .indent{
 margin-left:25px;
+}
+
+/* AJAX Loader */
+/* http://blogs.sitepointstatic.com/examples/tech/css3-ajax-icon/index.html*/
+#ajaxloader
+{
+	z-index: 999;
+	position: absolute;
+	width: 50px;
+	height: 50px;
+	border: 8px solid #fff;
+	border-right-color: transparent;
+	border-radius: 50%;
+	box-shadow: 0 0 25px 2px #eee;
+	left:40%;
+	top:40%;
+}
+#dim{
+background: rgba(0,0,0,.5);
+width:100%;
+height:100%;
+position:fixed;
+top:0;
+left:0;
+z-index:99;
+}
+#ajaxloader
+{
+	-webkit-animation: spin 1s linear infinite;
+	animation: spin 1s linear infinite;
+}
+@-webkit-keyframes spin
+{
+	from { -webkit-transform: rotate(0deg); opacity: 0.4; }
+	50%  { -webkit-transform: rotate(180deg); opacity: 1; }
+	to   { -webkit-transform: rotate(360deg); opacity: 0.4; }
+}
+
+@-moz-keyframes spin
+{
+	from { -moz-transform: rotate(0deg); opacity: 0.4; }
+	50%  { -moz-transform: rotate(180deg); opacity: 1; }
+	to   { -moz-transform: rotate(360deg); opacity: 0.4; }
+}
+
+@-ms-keyframes spin
+{
+	from { -ms-transform: rotate(0deg); opacity: 0.4; }
+	50%  { -ms-transform: rotate(180deg); opacity: 1; }
+	to   { -ms-transform: rotate(360deg); opacity: 0.4; }
+}
+
+@-o-keyframes spin
+{
+	from { -o-transform: rotate(0deg); opacity: 0.4; }
+	50%  { -o-transform: rotate(180deg); opacity: 1; }
+	to   { -o-transform: rotate(360deg); opacity: 0.4; }
+}
+
+@keyframes spin
+{
+	from { transform: rotate(0deg); opacity: 0.2; }
+	50%  { transform: rotate(180deg); opacity: 1; }
+	to   { transform: rotate(360deg); opacity: 0.2; }
 }
