Fix canvas/webGL problems

--- a/css/template.css
+++ b/css/template.css
@@ -148,7 +148,7 @@ box-shadow: 1px 1px 1px #888888;
 }
 #annalogo2{
 width:150px;
-height:150px
+height:150px;
 background-size: 150px 150px;
 background-image: url("images/annalogo.png");
 border: 1px solid #ccc;
