--- a/css/template.css
+++ b/css/template.css
@@ -26,9 +26,10 @@ border-bottom-style: dotted;
 	position:absolute;
 	left:40px;
 	background: #fff;
-	margin-top: 300px;
+	margin-top: 280px;
 	min-height:150px;
 	display:none;
+	min-width:285px;
 }
 
 .leftButtons{
@@ -136,7 +137,7 @@ padding-top:5px;
   margin-left: 30px;
 }
 .filter_header{
-margin-bottom:10px;
+margin-bottom:5px;
 }
 #annalogo{
 width:45px;
@@ -180,7 +181,7 @@ height:50px;
 /* http://blogs.sitepointstatic.com/examples/tech/css3-ajax-icon/index.html*/
 #ajaxloader
 {
-	z-index: 999;
+	z-index: 100;
 	position: absolute;
 	width: 50px;
 	height: 50px;
