--- a/css/template.css
+++ b/css/template.css
@@ -6,19 +6,31 @@
 	min-height:500px;
 }
 
-#menu{
-border-bottom-style: dotted;
-  padding-bottom: 10px;
-
+.btn-default:focus {
+    color: #333;
+    background-color: #ebebeb;
+    border-color: #adadad;
+}
+.glyphicon{
+word-spacing: -10px;
 }
 
-#settings{
-	position:absolute;
-	right:20px;
-	margin-top: 20px;
-	z-index: 10;
-	background: #fff;
-	max-width: 400px;
+.tab-content{
+padding-top:20px;
+}
+
+
+/****************/
+/* 	graph		*/
+/****************/
+
+#graphs, .basicgraph{
+	float:left;
+	margin: 10px;
+}
+
+#graphs h4{
+text-align:center;
 }
 
 #details_view{
@@ -32,20 +44,17 @@ border-bottom-style: dotted;
 	min-width:285px;
 }
 
-.leftButtons{
-	z-index: 10;
-	position: absolute;
-	margin-left:20px;
-	margin-top:20px;
-}
 
-.leftButtons div{
-	margin-bottom:5px;
-}
 
-#status_container{
-	margin-top: 30px;
-	/*z-index:999;*/
+
+/****************/
+/* 	Header		*/
+/****************/
+
+#menu{
+border-bottom-style: dotted;
+  padding-bottom: 10px;
+
 }
 
 #status{
@@ -53,34 +62,24 @@ border-bottom-style: dotted;
 	cursor: default;
 }
 
-.btn-default:focus {
-    color: #333;
-    background-color: #ebebeb;
-    border-color: #adadad;
+#settings{
+	position:absolute;
+	right:20px;
+	margin-top: 20px;
+	z-index: 10;
+	background: #fff;
+	max-width: 400px;
 }
-.glyphicon{
-word-spacing: -10px;
+
+#status_container{
+	margin-top: 30px;
+	/*z-index:999;*/
 }
+
 
 .nav li{
   display: inline;
   float:left;
-}
-
-.tab-content{
-padding-top:20px;
-}
-#filter_by_container label{
-display: block;
-}
-
-#graphs, .basicgraph{
-	float:left;
-	margin: 10px;
-}
-
-#graphs h4{
-text-align:center;
 }
 
 .logo{
@@ -98,13 +97,6 @@ border-bottom:0 !important;
 }
 
 
-#size_by_container label{
-min-width:100px;
-}
-#size_by_container label:first-child{
- margin-left: 10px;
-}
-
 .text-info{
 margin-top:30px;
 }
@@ -113,74 +105,133 @@ margin-top:30px;
 margin-top:10px;
 margin-bottom:5px;
 }
-#embed{
-	opacity: 0;
-  margin-top: 2px;
-}
 .footer{
 margin-top:10px;
 }
+
+
+
+
+
+
+/****************/
+/* 	Leftbuttons	*/
+/****************/
+#embed{
+	opacity: 0;
+  	margin-top: 2px;
+}
+.leftButtons{
+	z-index: 10;
+	position: absolute;
+	margin-left:20px;
+	margin-top:20px;
+}
+
+.leftButtons div{
+	margin-bottom:5px;
+}
+
+
+/****************/
+/* 	Filters		*/
+/****************/
+.contain{
+	padding-bottom:20px;
+}
+
+/*#filter_by_container, #highlight_by_container, #merge_by_container, #compare_by_container, #color_by_container, #size_by_container{
+		display:none;
+}*/
+
+#filter_by_container label{
+display: block;
+}
+.filter_container>div:not(:first-child){
+	margin-left: 30px;
+}
+
+.search-field>input{ /*Show all helper text in multiple chossen */
+	min-width: 160px;
+}
+
+#size_by_container label{
+	min-width:100px;
+}
+
+#size_by_container label:first-child{
+	margin-left: 10px;
+}
+
+.filter_header{
+	margin-bottom:5px;
+}
+
+#highlight_by_container > div{
+	padding-top:5px;
+}
+
+
+/*********/
+/* Logos */
+/*********/
+
 .ku-brand{
 padding-right:30px;
 margin-left:15px;
 }
-.contain{
-padding-top:20px;
-}
-#highlight_by_container > div{
-padding-top:5px;
-}
-.search-field>input{ /*Show all helper text in multiple chossen */
-	min-width: 160px;
-}
-.filter_container>div:not(:first-child){
-  margin-left: 30px;
-}
-.filter_header{
-margin-bottom:5px;
-}
+
 #annalogo{
-width:45px;
-height:45px;
-background-size: 45px 45px;
-background-image: url("images/annalogo.png");
-border: 1px solid #ccc;
-box-shadow: 1px 1px 1px #888888;
+	width:45px;
+	height:45px;
+	background-size: 45px 45px;
+	background-image: url("images/annalogo.png");
+	border: 1px solid #ccc;
+	box-shadow: 1px 1px 1px #888888;
 }
+
 #annalogo2{
-width:150px;
-height:150px;
-background-size: 150px 150px;
-background-image: url("images/annalogo.png");
-border: 1px solid #ccc;
-box-shadow: 1px 1px 1px #888888;
+	width:150px;
+	height:150px;
+	background-size: 150px 150px;
+	background-image: url("images/annalogo.png");
+	border: 1px solid #ccc;
+	box-shadow: 1px 1px 1px #888888;
 }
+
 .indent{
-margin-left:25px;
+	margin-left:25px;
 }
 
 #logo_medialab{
-display:inline-block;
-width:200px;
-height:38px;
-background-size: 200px 38px;
-background-image: url("images/logo_medialab.png");
+	display:inline-block;
+	width:200px;
+	height:38px;
+	background-size: 200px 38px;
+	background-image: url("images/logo_medialab.png");
 }
+
 #logo_ku{
-display:inline-block;
-width:177px;
-height:50px;
-background-size: 177px 50px;
-background-image: url("images/logo_ku.jpg");
+	display:inline-block;
+	width:177px;
+	height:50px;
+	background-size: 177px 50px;
+	background-image: url("images/logo_ku.jpg");
 }
+
 logo_generic{
-width:50px;
-height:50px;
+	width:50px;
+	height:50px;
 }
-/* AJAX Loader */
+
+
+
+/******************/
+/* Loading screen */
+/******************/
 /* http://blogs.sitepointstatic.com/examples/tech/css3-ajax-icon/index.html*/
-#ajaxloader
-{
+
+#ajaxloader{
 	z-index: 100;
 	position: absolute;
 	width: 50px;
@@ -192,36 +243,35 @@ height:50px;
 	left:40%;
 	top:40%;
 }
+
 #dim{
-background: rgba(0,0,0,.5);
-width:100%;
-height:100%;
-position:fixed;
-top:0;
-left:0;
-z-index:99;
+	background: rgba(0,0,0,.5);
+	width:100%;
+	height:100%;
+	position:fixed;
+	top:0;
+	left:0;
+	z-index:99;
 }
-#ajaxloader
-{
+
+#ajaxloader{
 	-webkit-animation: spin 1s linear infinite;
 	animation: spin 1s linear infinite;
 }
-@-webkit-keyframes spin
-{
+
+@-webkit-keyframes spin{
 	from { -webkit-transform: rotate(0deg); opacity: 0.4; }
 	50%  { -webkit-transform: rotate(180deg); opacity: 1; }
 	to   { -webkit-transform: rotate(360deg); opacity: 0.4; }
 }
 
-@-moz-keyframes spin
-{
+@-moz-keyframes spin{
 	from { -moz-transform: rotate(0deg); opacity: 0.4; }
 	50%  { -moz-transform: rotate(180deg); opacity: 1; }
 	to   { -moz-transform: rotate(360deg); opacity: 0.4; }
 }
 
-@-ms-keyframes spin
-{
+@-ms-keyframes spin{
 	from { -ms-transform: rotate(0deg); opacity: 0.4; }
 	50%  { -ms-transform: rotate(180deg); opacity: 1; }
 	to   { -ms-transform: rotate(360deg); opacity: 0.4; }
