--- a/css/template.css
+++ b/css/template.css
@@ -146,7 +146,7 @@ display: block;
 }
 
 .filter_container{
-margin-bottom: 20px;
+margin-bottom: 10px;
 }
 
 
@@ -255,17 +255,27 @@ logo_generic{
 /******************/
 /* http://blogs.sitepointstatic.com/examples/tech/css3-ajax-icon/index.html*/
 
-#ajaxloader{
-	z-index: 100;
+#loader{
+	width:200px;
+	height:200px;
 	position: absolute;
+	z-index: 100;
+	left:40%;
+	top:40%;
+	text-align:center;
+	color: #eee;
+}
+
+#ajaxloader{
+	margin:0 auto;
+	z-index: 100;
 	width: 50px;
 	height: 50px;
 	border: 8px solid #fff;
 	border-right-color: transparent;
 	border-radius: 50%;
 	box-shadow: 0 0 25px 2px #eee;
-	left:40%;
-	top:40%;
+	margin-bottom:10px;
 }
 
 #dim{
